@@ -24,3 +24,4 @@ ggplot2 0.8.3  (2008-XX-XX)
 * facet_wrap: in general, is much better at dealing with empty factor levels, and varying levels across layers
 * facet_grid: gains as.table argument to control direction of horizontal facets
 * annotate: new annotate function to make it easier to add annotations to plots
+* subset: experimental new feature.  Layers now have a subset argument, which takes subsets formatted like .(var1 < 5, var2 == 3) etc.
